WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
79071
ShadowRootList should have recalculation flag instead of ShadowRoot.
https://bugs.webkit.org/show_bug.cgi?id=79071
Summary
ShadowRootList should have recalculation flag instead of ShadowRoot.
Shinya Kawanaka
Reported
2012-02-20 20:12:02 PST
When recalculating ShadowRoot, we want to recalculate all shadow subtrees instead of shadow root. So ShadowRootList should have those flags instead of ShadowRoot.
Attachments
WIP
(12.60 KB, patch)
2012-02-20 21:04 PST
,
Shinya Kawanaka
no flags
Details
Formatted Diff
Diff
Patch
(15.57 KB, patch)
2012-02-22 23:44 PST
,
Shinya Kawanaka
no flags
Details
Formatted Diff
Diff
Patch
(15.57 KB, patch)
2012-02-22 23:50 PST
,
Shinya Kawanaka
no flags
Details
Formatted Diff
Diff
Patch
(15.14 KB, patch)
2012-02-23 00:43 PST
,
Shinya Kawanaka
no flags
Details
Formatted Diff
Diff
Show Obsolete
(3)
View All
Add attachment
proposed patch, testcase, etc.
Shinya Kawanaka
Comment 1
2012-02-20 21:04:19 PST
Created
attachment 127911
[details]
WIP
Shinya Kawanaka
Comment 2
2012-02-22 23:44:20 PST
Created
attachment 128412
[details]
Patch
Philippe Normand
Comment 3
2012-02-22 23:49:26 PST
Comment on
attachment 128412
[details]
Patch
Attachment 128412
[details]
did not pass gtk-ews (gtk): Output:
http://queues.webkit.org/results/11574156
Shinya Kawanaka
Comment 4
2012-02-22 23:50:15 PST
Created
attachment 128413
[details]
Patch
Hajime Morrita
Comment 5
2012-02-23 00:21:35 PST
Comment on
attachment 128413
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=128413&action=review
> Source/WebCore/dom/ShadowRoot.h:77 > + ShadowRootList* belongingShadowRootList() const;
I think we can just call it parent or parentList. or list? Honestly I feel this is no longer list.
> Source/WebCore/dom/ShadowRootList.cpp:208 > + if (hostNode)
Is this possible to null?
> Source/WebCore/dom/ShadowRootList.h:30 > +#include "Node.h"
Why do we need this?
Shinya Kawanaka
Comment 6
2012-02-23 00:43:22 PST
Created
attachment 128424
[details]
Patch
Shinya Kawanaka
Comment 7
2012-02-23 00:44:55 PST
(In reply to
comment #5
)
> (From update of
attachment 128413
[details]
) > View in context:
https://bugs.webkit.org/attachment.cgi?id=128413&action=review
> > > Source/WebCore/dom/ShadowRoot.h:77 > > + ShadowRootList* belongingShadowRootList() const; > > I think we can just call it parent or parentList. or list? > Honestly I feel this is no longer list.
Yeah, I'm now thinking so. Let us make another bug to consider a name of ShadowRootList. BTW, I've chosen list() here.
> > > Source/WebCore/dom/ShadowRootList.cpp:208 > > + if (hostNode) > > Is this possible to null?
No. Done.
> > > Source/WebCore/dom/ShadowRootList.h:30 > > +#include "Node.h" > > Why do we need this?
Hmm... We don't need this apparently.
WebKit Review Bot
Comment 8
2012-02-23 02:15:17 PST
Comment on
attachment 128424
[details]
Patch Rejecting
attachment 128424
[details]
from commit-queue.
shinyak@chromium.org
does not have committer permissions according to
http://trac.webkit.org/browser/trunk/Tools/Scripts/webkitpy/common/config/committers.py
. - If you do not have committer rights please read
http://webkit.org/coding/contributing.html
for instructions on how to use bugzilla flags. - If you have committer rights please correct the error in Tools/Scripts/webkitpy/common/config/committers.py by adding yourself to the file (no review needed). The commit-queue restarts itself every 2 hours. After restart the commit-queue will correctly respect your committer rights.
Hajime Morrita
Comment 9
2012-02-23 17:37:54 PST
Comment on
attachment 128424
[details]
Patch haraken told me that cq+ bot is somehow rolled back to the older revision. I hope it'll be fixed soon.
WebKit Review Bot
Comment 10
2012-02-23 18:36:43 PST
Comment on
attachment 128424
[details]
Patch Clearing flags on attachment: 128424 Committed
r108713
: <
http://trac.webkit.org/changeset/108713
>
WebKit Review Bot
Comment 11
2012-02-23 18:36:49 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug